Mon Mar 16 22:31:02 1998  Federico Mena  <federico@nuclecu.unam.mx>

	* gdk/gdkwindow.c (gdk_window_xid_at): Use signed integers so that
	testing will not fail for windows that are off-screen.  

	(gdk_window_xid_at_coords): Only considers visible windows. 	

Tue Mar 17 03:56:13 1998  Tim Janik  <timj@gimp.org>

	* gtk/gtkspinbutton.h: exported gtk_spin_button_spin since it is
	used in testgtk, and besides that.

	* gtk/testgtk.c: created a new "test" cursors, which showes different
	types of GdkCursors and is a very simple example at using the drawing
	area.

Mon Mar 16 18:19:31 GMT 1998 Tony Gale  <gale@gimp.org>
	* docs/gtkfaq.sgml:
	    - new question on modal windows
	    - new question on updating progressbars
	    - update all the links to gtk.org

>>>>>>> 1.255
Mon Mar 16 09:15:03 GMT 1998 Tony Gale  <gale@gimp.org>

	* docs/gtk_tut.sgml: 
	    - New subsection on colourselection from Tom Bech <tomb@ii.uib.no>
	    - Moved fileselection text to Miscallaneous Widgets section
	    - Started new section on the Text widget
	    - Removed Viewport, Paned, HPaned and VPaned from list of
	      NO_WINDOW widgets.

Mon Mar 16 01:33:36 1998  Owen Taylor  <owt1@cornell.edu>

	* gtk-config.in: Added trailing newline, hopefully will
	  fix the problem with esac disappearing.

	* gtk/Makefile.am (test-debug): Improved test targets
	  will work with --enable-shared
    	    [From:  Raja R Harinath  <harinath@cs.umn.edu>]

  	* gtk.m4: Not all shells understand $(...).  Use `...` instead.
    	    [From:  Raja R Harinath  <harinath@cs.umn.edu>]
	- use AM_PATH_PROG instead of AM_CHECK_PROG, so the user
	  can specify programs not in their path.
  
	* Makefile.am: added gtk.m4 to EXTRA_DIST

Sun Mar 15 23:44:10 1998  Tim Janik  <timj@gimp.org>

	* gtk/gtkwidget.h:
	* gtk/gtkmenushell.c: 
	* gtk/gtkmenu.c: 
	* gtk/gtkmain.c: removed EXCLUSIVE_GRAB again, just disable modal
	event delivery for insensitive children.

Sun Mar 15 22:44:33 1998  Tim Janik  <timj@gimp.org>
